Scripts/teaser4.css
@font-face {
  font-family: 'GiniFont';
  src: url('../Assets/optiagency-gothic-webfont.woff2') format('woff2'),
       url('../Assets/optiagency-gothic-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;

}

html,body{
  height:100%;
}

.flex-fill {
  flex:1;
}


body {
  /* background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(black), to(white)); */
  background: -webkit-linear-gradient(bottom, black 50%, #191919);
  background: -moz-linear-gradient(bottom, black 50%,#191919);
  background: -ms-linear-gradient(bottom, black 50%,#191919);
  background: -o-linear-gradient(bottom, black 50%,#191919);
  background: linear-gradient(bottom, black 50%,#191919);
}

#ginLogo {
  display: block;
  max-width: 100%;
  max-height: 100vh;
  opacity: 0;
  transform: scale(1);
  animation: logoAnim 1.5s linear 2.5s forwards
}

/* premaknjeno iz leve za 550 in zgoraj za 50*/

#anim {
  /* margin-top: -8rem; */
  height: 5px;
}

#ginStd {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-left: 75px;
  transform: translate(-50%, -50%);
  z-index: -2;
  animation-name: ginStdAnim;
  animation-duration: 1.5s;
  animation-delay: 0.8s;
  animation-fill-mode: backwards;
  animation-timing-function: ease-out;
}

#ginPrm {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-left: -75px;
  transform: translate(-50%, -50%);
  z-index: -2;
  animation-name: ginPrmAnim;
  animation-duration: 1.5s;
  animation-delay: 0.8s;
  animation-fill-mode: backwards;
  animation-timing-function: ease-out;
}


#brinTop {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: 130px;
  transform: translate(-50%, -50%) scale(1);
  z-index: -3;
  animation-name: brinTopAnim;
  animation-duration: 2s;
  animation-delay: 1.5s;
  animation-fill-mode: backwards;
  animation-timing-function: ease-out;
}

#brinBot {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: 270px;
  transform: translate(-50%, -50%);
  z-index: 1;
  animation-name: brinBotAnim;
  animation-duration: 2s;
  animation-delay: 1.5s;
  animation-fill-mode: backwards;
  animation-timing-function: ease-out;
}

#tonic {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: 100px; 
  transform: translate(-50%, -50%) scale(1) ;
  opacity: 1;
  z-index: -1;
  animation-name: tonicAnim;
  animation-duration: 2.5s;
  animation-fill-mode: backwards;
  animation-timing-function: ease-out;
}

@keyframes tonicAnim {
  0% {opacity: 0; transform: translate(-50%, -50%) scale(0.8) ; }
  50% {opacity: 1;}
  100% {transform: translate(-50%, -50%) scale(1) ;}
}

@keyframes ginPrmAnim {
  0% {opacity: 0; margin-left: -125px;}
  50% {opacity: 1;}
  100% {margin-left: -75px;}
}

@keyframes ginStdAnim {
  0% {opacity: 0; margin-left: 125px;}
  50% {opacity: 1;}
  100% {margin-left: 75px;}
}

@keyframes brinBotAnim {
  0% {opacity: 0; margin-top: 320px;}
  50% {opacity: 1;}
  100% {margin-top: 270px;}
}

@keyframes brinTopAnim {
  0% {opacity: 0; margin-top: 180px;}
  50% {opacity: 1;}
  100% {margin-top: 130px;}
}

@keyframes logoAnim {
  from {opacity: 0;}
  to {opacity: 1;}
}

/* Smoke effect */

/* traja 7s */

#smoke {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -6;
  opacity: 0;
  animation: startVid 0.5s linear 4.5s forwards, endVid 0.5s linear 9s forwards;
}

@keyframes endVid {
  from {opacity: 1;}
  to {opacity: 0;}
}

@keyframes startVid {
  from {opacity: 0;}
  to {opacity: 1;}
}

.space {
  width: 20px;
}

#smokeAnim {
  margin-bottom: auto;
  margin-top: auto;
  /* margin-top: 15rem; */
}

h1 {
  position: absolute;
  top: 50%;
  left: 0;
  transform: scale(1) translate(-50%, -50%);
  transform: translateY(-50%);
  width: 100%;
  color: rgb(158, 158, 158);
  font-size: 2rem;
  font-family: GiniFont;
  font-weight: lighter;
  text-align: center;
}

h1 span {
  margin: 0 -4px;
  opacity: 0;
  display: inline-block;
  animation: animate 1s linear forwards;
}

@keyframes animate {
  0% {opacity: 0; transform: rotateY(90deg); filter: blur(10px);}
  100% {opacity: 1; transform: rotateY(0deg); filter: blur(0px);}
}

h1 span:nth-child(1) {
  animation-delay: 4.6s;
}
h1 span:nth-child(2) {
  animation-delay: 4.7s;
}
h1 span:nth-child(3) {
  animation-delay: 4.8s;
}
h1 span:nth-child(4) {
  animation-delay: 4.9s;
}
h1 span:nth-child(5) {
  animation-delay: 5.05s;
}
h1 span:nth-child(6) {
  animation-delay: 5.1s;
}
h1 span:nth-child(8) {
  animation-delay: 5.4s;
}
h1 span:nth-child(9) {
  animation-delay: 5.5s;
}
h1 span:nth-child(11) {
  animation-delay: 5.8s;
}
h1 span:nth-child(13) {
  animation-delay: 6s;
}
h1 span:nth-child(14) {
  animation-delay: 6.1s;
}
h1 span:nth-child(15) {
  animation-delay: 6.2s;
}
h1 span:nth-child(16) {
  animation-delay: 6.3s;
}
h1 span:nth-child(17) {
  animation-delay: 6.4s;
}
h1 span:nth-child(18) {
  animation-delay: 6.5s;
}

@media (min-width: 410px) {
 h1 {
  font-size: 2.8rem;
 }

 h1 span {
  margin: 0 -6px;
 }
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {

}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {

}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
  /* #anim {
    margin: -5rem auto 0 auto;
    transform: scale(1);
  }

  #smokeAnim {
    margin-top: 10rem;
  }

  #ginLogo {
    margin: 1rem auto 0 auto;
    transform: scale(1.15);
  }
  */

  h1 {
    top: 50%;
    font-size: 5rem;
  }

}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  #anim {
    margin-top: 5rem;
    transform: scale(0.85);
  }

  #smokeAnim {
    margin-top: -5rem;
    margin-bottom: 0;
  }

  #ginLogo {
    margin: 8rem auto 0 auto;
    transform: scale(1.25);
  }

  h1 {
    top: 45%;
  }

  body {
    /* background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(black), to(white)); */
    background: -webkit-linear-gradient(left, black 50%, #191919);
    background: -moz-linear-gradient(left, black 50%,#191919);
    background: -ms-linear-gradient(left, black 50%,#191919);
    background: -o-linear-gradient(left, black 50%,#191919);
    background: linear-gradient(left, black 50%,#191919);
  }

}

@media (min-width: 1400px) {
  #anim {
    margin-top: 30rem;
    transform: none;
  }

  #smokeAnim {
    margin-top: -20rem;
  }

  #ginLogo {
    margin: 8rem auto 0 auto;
    transform: scale(1.5);
  }

  h1 {
    top: 50%;
  }
}

